seo meta tag aded

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta charset="utf-8">
-  <meta content="subhojit github work" name="description">
-  <meta content="subhojit mondal" name="author">
+
+  <meta name="keywords" content="modern front end workflow, node, npm, gulp, gulp boilerplate, gulp-boilerplate, grunt boilerplate, grunt-boilerplate, front end technologies, package.json, sass, scss, js, java-script, java script, css, image minify, automation, bower, subhojit mondal's work, subhojit mondal work, github work, subhojit1992.github work, gulp automation, grunt automation, task automation, etc.">
+  <meta name="description" content="Subhojit Mondal work for front end workflow. Automation process like grunt and gulp with gulp boilerplate and grunt boilerplate. Work with scss like preprocessor and many more latest front end technologies ">
 
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
